# dioxus-query-fullstack

./: Cargo.toml  README.md
assets/styling/: main.css
src/: main.rs
