[package]
name = "dioxus-query-fullstack"
version = "0.1.0"
authors = ["marc2332 <mespinsanz@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["router", "fullstack"] }
dioxus-query = { git = "https://github.com/marc2332/dioxus-query" }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.0", features = ["time"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:tokio"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
